--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -13,14 +13,14 @@
         Your order has been successfully placed. A confirmation email has been sent to
         <strong>{{ order.email }}</strong>.
     </p>
-    <!-- Gift Message -->
+
     {% if order.gift_message %}
-    <div class="alert alert-info text-center">
-        <strong>Gift Message:</strong> {{ order.gift_message }}
-    </div>
-    <p class="text-center text-success">
-        Your personalised message will be added to your order.
-    </p>
+        <div class="alert alert-info text-center">
+            <strong>Gift Message:</strong> {{ order.gift_message }}
+        </div>
+        <p class="text-center text-success">
+            Your personalised message will be added to your order.
+        </p>
     {% endif %}
 
     <div class="row">
@@ -53,12 +53,18 @@
 
     <!-- Navigation Options -->
     <div id="thank-you-nav" class="mt-5">
-        <a href="{% url 'home' %}" class="btn btn-outline-light btn-lg rounded-0">
+        <a
+            href="{% url 'home' %}"
+            class="btn btn-outline-light btn-lg rounded-0"
+        >
             <i class="fas fa-home" aria-hidden="true"></i>
             <span class="sr-only">Return to Homepage</span>
             Return to Homepage
         </a>
-        <a href="{% url 'products:product_list' %}" class="btn btn-outline-light btn-lg rounded-0">
+        <a
+            href="{% url 'products:product_list' %}"
+            class="btn btn-outline-light btn-lg rounded-0"
+        >
             <i class="fas fa-shopping-bag" aria-hidden="true"></i>
             <span class="sr-only">Continue Shopping</span>
             Continue Shopping
