--- a/core/templates/core/faq_form.html
+++ b/core/templates/core/faq_form.html
@@ -10,7 +10,7 @@
     <h2>
       {% if object %} Edit FAQ {% else %} Add FAQ {% endif %}
     </h2>
-    <form method="post">
+    <form method="post" novalidate>
       {% csrf_token %}
       {{ form.as_p }}
       <button type="submit" class="btn btn-primary">
