--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,45 +1,47 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container">
-      <a class="navbar-brand" href="/">GAA Store</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item"><a class="nav-link" href="/hurleys/">Hurleys</a></li>
-          <li class="nav-item"><a class="nav-link" href="/accessories/">Accessories</a></li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'how_to_measure' %}">
-              How to Measure
-            </a>
-          </li>
-          <li class="nav-item"><a class="nav-link" href="{% url 'faq' %}">FAQ</a>
-          </li>
-          {% if user.is_authenticated %}
-          <!-- If someone is already show their username and a “Log out” link -->
-            <li class="nav-item">
-              <a class="navbar-text mr-2 text-white" href="{% url 'profile' %}">
-                Hello, {{ user.username }}
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'account_logout' %}">
-                Log out
-              </a>
-            </li>
-          {% else %}
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'account_login' %}">
-                Sign Up / Log In
-              </a>
-            </li>
-          {% endif %}
-          <li class="nav-item">
-            <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="{% url 'view_bag' %}">
-                Bag (<span id="bag-count">{{ bag_count }}</span>)
-            </a>
+  <div class="container">
+    <a class="navbar-brand" href="/">GAA Store</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="/hurleys/">Hurleys</a>
         </li>
-        </ul>
-      </div>
+        <li class="nav-item">
+          <a class="nav-link" href="/accessories/">Accessories</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'how_to_measure' %}">How to Measure</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'faq' %}">FAQ</a>
+        </li>
+        {% if user.is_authenticated %}
+          <li class="nav-item">
+            <a class="navbar-text mr-2 text-white" href="{% url 'profile' %}">
+              Hello, {{ user.username }}
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'account_logout' %}">
+              Log out
+            </a>
+          </li>
+        {% else %}
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'account_login' %}">
+              Sign Up / Log In
+            </a>
+          </li>
+        {% endif %}
+        <li class="nav-item">
+          <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="{% url 'view_bag' %}">
+            Bag (<span id="bag-count">{{ bag_count }}</span>)
+          </a>
+        </li>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
